add fetch functionality
