# docs/swagger.json
@@ -68,7 +68,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.JsonResponse-bool"
+                            "$ref": "#/definitions/controller.JsonResponse-array_response_SpaceCraftFetchResponse"
                         }
                     }
                 }
@@ -220,6 +220,29 @@
                 }
             }
         },
+        "controller.JsonResponse-array_response_SpaceCraftFetchResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.SpaceCraftFetchResponse"
+                    }
+                },
+                "error": {
+                    "$ref": "#/definitions/controller.ErrorResponse"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
         "controller.JsonResponse-bool": {
             "type": "object",
             "properties": {
@@ -330,6 +353,23 @@
                     "type": "integer"
                 },
                 "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.SpaceCraftFetchResponse": {
+            "type": "object",
+            "properties": {
+                "class": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "string"
                 }
             }
